<resources>
    <string name="app_name">Vaccination</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="date_birth">Date of birth</string>
    <string name="region">Region of residence</string>
    <string name="email">Email</string>
    <string name="pwd">Password</string>
    <string name="old_pwd">Old Password</string>
    <string name="new_pwd">New Password</string>
    <string name="repeat_pwd">Repeat Password</string>
    <string name="forgot_pwd">Forgot your password?</string>
    <string name="recover_pwd">Recover password</string>

    <!-- Home fragment-->
    <string name="title_home">Covid situation in Italy</string>

    <!-- Booking fragment-->
    <string name="title_booking">Book vaccine</string>
    <string name="first_step_text">We have received your prenotation and will inform you soon</string>

    <!-- Bottom navigation text -->
    <string name="home">Home</string>
    <string name="booking">Book</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>