<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    tools:context=".Activities.LoginActivity">

    <ImageView
        android:id="@+id/waveView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_wave" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="148dp"
        android:layout_height="127dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/regione_sito_vaccino_covid_2021"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hapticFeedbackEnabled="false"
        app:cardBackgroundColor="#00FFFFFF"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:visibility="visible">

            <TextView
                android:id="@+id/loginTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/input_login_margin_inter"
                android:layout_marginBottom="@dimen/input_login_margin_inter"
                android:fontFamily="@font/abeezee"
                android:paddingLeft="@dimen/input_padding_left"
                android:paddingTop="@dimen/input_padding_top"
                android:paddingRight="@dimen/input_padding_right"
                android:paddingBottom="@dimen/btn_margin_bottom"
                android:text="@string/login"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/input_login_margin_inter"
                android:layout_marginBottom="@dimen/input_login_margin_inter"
                android:background="@drawable/input_border"
                android:drawableStart="@drawable/ic_baseline_mail_24"
                android:drawablePadding="@dimen/drawable_padding"
                android:ems="10"
                android:fontFamily="@font/abeezee"
                android:hint="@string/email"
                android:inputType="textPersonName|textEmailAddress"
                android:paddingStart="@dimen/input_padding_left"
                android:paddingTop="@dimen/input_padding_top"
                android:paddingEnd="@dimen/input_padding_right"
                android:paddingBottom="@dimen/input_padding_bottom" />

            <EditText
                android:id="@+id/inputPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/input_login_margin_inter"
                android:background="@drawable/input_border"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="@dimen/drawable_padding"
                android:ems="10"
                android:fontFamily="@font/abeezee"
                android:hint="@string/pwd"
                android:inputType="textPassword"
                android:paddingStart="@dimen/input_padding_left"
                android:paddingTop="@dimen/input_padding_top"
                android:paddingEnd="@dimen/input_padding_right"
                android:paddingBottom="@dimen/input_padding_bottom" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abeezee"
                android:paddingLeft="@dimen/input_padding_left"
                android:paddingTop="@dimen/input_padding_top"
                android:paddingRight="@dimen/input_padding_right"
                android:paddingBottom="@dimen/input_padding_bottom"
                android:text="@string/forgot_pwd"
                android:textAlignment="textEnd"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/link_text_size"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/btn_margin_start"
            android:layout_marginTop="@dimen/btn_margin_top"
            android:layout_marginEnd="@dimen/btn_margin_end"
            android:layout_marginBottom="@dimen/btn_margin_inter"
            android:background="@drawable/btn_bg"
            android:text="@string/login"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/btn_margin_start"
            android:layout_marginTop="@dimen/btn_margin_inter"
            android:layout_marginEnd="@dimen/btn_margin_end"
            android:layout_marginBottom="@dimen/btn_margin_bottom"
            android:background="@drawable/btn_bg"
            android:text="@string/signup" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>