<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AccountPageFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="3">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@color/primaryColor"
                android:gravity="center_horizontal|center_vertical">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:elevation="2dp"
                    android:src="@drawable/account_img" />

                <TextView
                    android:id="@+id/nameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imageView5"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/abeezee"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="@dimen/fragment_padding_start"
                android:paddingTop="@dimen/fragment_padding_top"
                android:paddingEnd="@dimen/fragment_padding_end">

                <EditText
                    android:id="@+id/inputNameAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/input_login_margin_inter"
                    android:background="@drawable/input_border"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:fontFamily="@font/abeezee"
                    android:hint="@string/name"
                    android:paddingLeft="@dimen/input_padding_left"
                    android:paddingTop="@dimen/input_padding_top"
                    android:paddingRight="@dimen/input_padding_right"
                    android:paddingBottom="@dimen/input_padding_bottom" />

                <EditText
                    android:id="@+id/inputSurnameAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/inputNameAccount"
                    android:layout_marginTop="@dimen/input_login_margin_inter"
                    android:layout_marginBottom="@dimen/input_login_margin_inter"
                    android:background="@drawable/input_border"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:fontFamily="@font/abeezee"
                    android:hint="@string/surname"
                    android:paddingLeft="@dimen/input_padding_left"
                    android:paddingTop="@dimen/input_padding_top"
                    android:paddingRight="@dimen/input_padding_right"
                    android:paddingBottom="@dimen/input_padding_bottom" />

                <EditText
                    android:id="@+id/inputEmailAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/inputSurnameAccount"
                    android:layout_marginTop="@dimen/input_login_margin_inter"
                    android:layout_marginBottom="@dimen/input_login_margin_inter"
                    android:background="@drawable/input_border"
                    android:drawableStart="@drawable/ic_baseline_mail_24"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:fontFamily="@font/abeezee"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="@dimen/input_padding_left"
                    android:paddingTop="@dimen/input_padding_top"
                    android:paddingRight="@dimen/input_padding_right"
                    android:paddingBottom="@dimen/input_padding_bottom" />

                <EditText
                    android:id="@+id/inputDateBirthAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/inputEmailAccount"
                    android:layout_marginTop="@dimen/input_login_margin_inter"
                    android:layout_marginBottom="@dimen/input_login_margin_inter"
                    android:background="@drawable/input_border"
                    android:drawableStart="@drawable/ic_baseline_date_range_24"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:fontFamily="@font/abeezee"
                    android:hint="@string/date_birth"
                    android:inputType="date"
                    android:paddingLeft="@dimen/input_padding_left"
                    android:paddingTop="@dimen/input_padding_top"
                    android:paddingRight="@dimen/input_padding_right"
                    android:paddingBottom="@dimen/input_padding_bottom" />

                <Button
                    android:id="@+id/btnSaveAccount"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/inputDateBirthAccount"
                    android:layout_alignParentRight="false"
                    android:background="@drawable/ic_save_24"
                    android:visibility="invisible"
                    tools:visibility="visible" />

                <Button
                    android:id="@+id/btnLogout"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="@dimen/btn_margin_bottom"
                    android:layout_marginBottom="@dimen/btn_margin_bottom"
                    android:background="@drawable/ic_logout_24" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>